# stellarium-dynamic-plugin

./: CMakeLists.txt
src/: CMakeLists.txt
src/gui/: dynamicPluginTemplateWindow.ui
